- increase cart image constrain - adjust spacing on product detail page, closes #44 - fix spacing for tagline, closes #43 - increase cart image/text size, closes #42

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -22,8 +22,11 @@
   width: 100%
   
   @media screen and (max-width: $break-extra-large)
-    max-width: 50%
-  
+    max-width: 65%
+    
+  @media screen and (max-width: $break-large)
+    max-width: 60%
+    
   @media screen and (max-width: $break-small)
     float: none
     max-width: 100%
@@ -37,19 +40,13 @@
     a.item_image
       float: left
       height: 100%
-      max-width: 200px
+      max-width: 40%
       text-align: center
       width: 100%
       
-      @media screen and (max-width: $break-extra-large)
-        max-width: 150px
-        
       @media screen and (max-width: $break-medium)
         max-width: 35%
-        
-      @media screen and (max-width: $break-small)
-        max-width: 30%
-
+      
       img
         display: block
         height: auto
@@ -63,34 +60,33 @@
       padding: 0 40px
       width: auto
       
-      @media screen and (max-width: $break-extra-large)
-        max-width: 60%
+      @media screen and (max-width: $break-large)
         padding-left: 20px
-      
+        
       @media screen and (max-width: $break-small)
-        max-width: 70%
+        padding-right: 0
 
       a
         color: $primary-text-color
         display: block
-        font-size: 18px
-        line-height: 22px
+        font-size: 26px
+        line-height: 36px
         
-        @media screen and (max-width: $break-small)
-          font-size: 16px
-          line-height: 20px
+        @media screen and (max-width: $break-large)
+          font-size: 18px
+          line-height: 26px
       
         > span
           color: $secondary-text-color
           display: block
           font-family: $secondary-font
-          font-size: 14px
-          line-height: 18px
+          font-size: 18px
+          line-height: 26px
           margin-top: 6px
           
-          @media screen and (max-width: $break-small)
-            font-size: 12px
-            margin-top: 4px
+          @media screen and (max-width: $break-large)
+            font-size: 14px
+            line-height: 22px
             
     .qty_holder
       +pie-clearfix
@@ -108,8 +104,8 @@
         width: 40px
         
         @media screen and (max-width: $break-small)
-          height: 32px
-          width: 32px
+          height: 36px
+          width: 36px
         
         svg
           fill: $secondary-text-color
@@ -118,10 +114,9 @@
           top: 2px
           width: 20px
           
-          @media screen and (max-width: $break-extra-small)
-            height: 16px
-            top: 1px
-            width: 16px
+          @media screen and (max-width: $break-small)
+            height: 18px
+            width: 18px
         
       input
         +appearance(none)
@@ -135,9 +130,9 @@
         width: 60px
         
         @media screen and (max-width: $break-small)
-          height: 32px
           font-size: 14px
-          width: 40px
+          height: 36px
+          width: 56px
         
         &:focus
           box-shadow: none
@@ -151,7 +146,7 @@
   border: 2px solid $border-color
   color: $secondary-text-color
   float: right
-  max-width: 400px
+  max-width: 30%
   padding: 45px 40px 20px 40px
   position: -webkit-sticky
   position: sticky
@@ -159,11 +154,18 @@
   top: 110px
   width: 100%
   
+  @media screen and (max-width: $break-extra-large)
+    max-width: 35%
+  
   @media screen and (max-width: $break-large)
     max-width: 40%
-    
-  @media screen and (max-width: $break-medium)
-    max-width: 50%
+    padding: 40px 35px 25px 35px
+  
+  @media screen and (max-width: $break-small)
+    border: none
+    float: none
+    max-width: 100%
+    padding: 40px 0 0
   
   h3, h4
     margin-bottom: 20px
@@ -180,21 +182,12 @@
       
   button, .button
     max-width: 100%
-  
-  @media screen and (max-width: $break-small)
-    border: none
-    float: none
-    max-width: 100%
-    padding: 45px 0
-  
+    
   .continue_shopping
     background: none
     color: $secondary-text-color
     font-size: 12px
     margin-top: 20px
-    
-    @media screen and (max-width: $break-small)
-      font-size: 14px
     
   .cart_shipping
     .select
